set a min-height on image loading so that loading animation doesn't overlap details on mobile while loading fix warnings

--- a/src/index.css
+++ b/src/index.css
@@ -135,7 +135,7 @@ input {
 .select-container:after {
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
-  top: 70%;
+  top: 75%;
   right: 10px;
   border-top: 8px solid #888;
 }
